@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Separation of ideographic and phonetic characters in DICOMweb JSON and XML
 * Support of Japanese Kanji (ISO 2022 IR 87) and Korean (ISO 2022 IR 149) encodings
 * Basic support for character sets with code extensions (ISO 2022 escape sequences)
 
